<resources>
    <string name="app_name">Trace Separately</string>
    <string name="title_activity_log_in">Sign In</string>

    <string name="clients">Clients</string>
    <string name="searchClientText">Search a Client</string>
    <string name="delete_a_client">Delete a Client</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="admin_mode">Admin Mode</string>
    <string name="btnSearch">Search</string>
    <string name="btnAdd">Add New Client</string>
    <string name="btnDelete">Delete Client</string>
    <string name="btnUpdate">Update Client Particulars</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Closed</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="clientAddress">Client Address</string>
    <string name="nric">NRIC</string>
    <string name="Address">Address</string>
    <string name="DOB">Date Of Birth</string>


    <string name="btnAddClient">Add</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_search_fragment">this is search fragment</string>
    <string name="this_is_delete_fragment">this is delete fragment</string>
    <string name="this_is_register_fragment">this is register fragment</string>
    <string name="this_is_update_fragment">this is update fragment</string>


</resources>