<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/admin_mode">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/clients"
                    android:id="@+id/client"
                    android:icon="@drawable/ic_perm_identity_black_24dp">
                </item>
                <item android:title="@string/searchClientText"
                    android:id="@+id/searchClient"
                    android:icon="@drawable/ic_person_search_black_24dp">
                </item>
                <item android:title="Manage Clients"
                    android:id="@+id/manageClient"
                    android:icon="@drawable/ic_baseline_supervisor_account_24">
                </item>

            </group>
        </menu>
    </item>
    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item android:title="@string/log_out"
                    android:id="@+id/logOut"
                    android:icon="@drawable/ic_baseline_exit_to_app_24">
                </item>
            </group>
        </menu>
    </item>
</menu>